# tinyedge-kubelet

./: Cargo.toml
src/: main.rs  myprovider.rs  provider.rs  states.rs
src/states/: container.rs  pod.rs  provider.rs
src/states/container/: running.rs  terminated.rs  waiting.rs
src/states/pod/: completed.rs  initializing.rs  running.rs  starting.rs
